# best-claude-hud

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  README.zh.md  README_CN.md  README_JA.md  RELEASING.md  SECURITY.md  cliff.toml  flake.nix
.github/workflows/: ci.yml  npm-publish.yml  release.yml
docs/: logo-prompt.md  triage.md
npm/main/: README.md  package.json
npm/scripts/: prepare-packages.js
packaging/npm/: README.md  package.json
packaging/npm/lib/: resolve-binary.js
packaging/npm/scripts/: build-packages.js
packaging/npm/test/: resolve-binary.test.js
src/: cli.rs  main.rs  updater.rs
src/config/: loader.rs  models.rs  types.rs
src/core/: effort.rs  mod.rs  statusline.rs
src/core/segments/: context_window.rs  cost.rs  directory.rs  git.rs  mod.rs  model.rs  output_style.rs  session.rs  update.rs  usage.rs
src/ui/: app.rs  main_menu.rs
src/ui/components/: preview.rs
src/ui/themes/: presets.rs
src/utils/: claude_settings.rs  mod.rs
