[package]
name = "best-claude-hud"
version = "0.1.9"
edition = "2021"
description = "Minimal Claude Code statusline HUD written in Rust"
authors = ["GaoSSR"]
license = "Apache-2.0"
repository = "https://github.com/GaoSSR/best-claude-hud"
readme = "README.md"
keywords = ["claude", "statusline", "hud", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "1.0"

ratatui = "0.30"
crossterm = "0.29"
ansi_term = "0.12"
ansi-to-tui = "8.0"

ureq = { version = "3.0", features = ["json"] }
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
regex = "1.0"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
